# diffraction

./: .gitignore  README.md  pyproject.toml  requirements-visualization.txt
diffraction/: __init__.py
diffraction/core/: __init__.py  crystal.py  reciprocal_lattice.py  ub_matrix.py
diffraction/data/: .cif  .json  Ba3CeIr2O9.json  LiNbO3.cif  LiNbO3.json  LiNbO3_2.json  Sr2IrO4_RT.json  SrTiO3.json
diffraction/io/: __init__.py  json_io.py
diffraction/phonons/: __init__.py  dft_importers.py  manager.py  modes.py  normalization.py
diffraction/recspace/: calculations.py
diffraction/visualization/: __init__.py  angular_solutions.py  crystal_visualization.py  diffraction_pattern.py  phonon_mode.py  reciprocal_lattice.py  structure_factor.py  ub_refinement.py  visual_primitives.py
diffraction/visualization/models/: atom.urdf  cone.stl  cylinder.urdf  plane_x.urdf  plane_y.urdf  plane_z.urdf
examples/: basic_usage.ipynb  visualization.ipynb  visualization_animated.ipynb  visualization_ewald_sphere.ipynb
tests/: __init__.py  conftest.py
